--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
   "name": "Hoponwheels",
-  "homepage": "https://ubesaslam25.github.io/hoponwheels",
+  "deploy": "gh-pages -d build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-licensing": "^1.1.1",
+    "@progress/kendo-react-dateinputs": "^4.1.0",
+    "@progress/kendo-react-intl": "^4.1.0",
+    "@syncfusion/ej2-react-calendars": "^18.4.30",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "concurrently": "^5.3.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-update": "^15.6.3",
     "react-axios": "^2.0.3",
+    "react-datepicker": "^3.3.0",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-google-places-autocomplete": "^3.0.0",
     "react-helmet": "^6.1.0",
+    "react-modern-datepicker": "^1.1.0",
+    "react-picky-date-time": "^1.6.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "split-string": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
