--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-update": "^15.6.3",
     "react-axios": "^2.0.3",
+    "react-bootstrap": "^1.4.0",
+    "react-currency-format": "^1.0.0",
     "react-datepicker": "^3.3.0",
     "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-full-page-loader-overlay": "0.0.12",
     "react-google-places-autocomplete": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-modern-datepicker": "^1.1.0",
+    "react-owl-carousel": "^2.3.1",
     "react-picky-date-time": "^1.6.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-substring": "^0.1.6",
     "split-string": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
