--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hoponwheels",
+  "name": "hoponwheels",
   "deploy": "gh-pages -d build",
   "version": "0.1.0",
   "private": true,
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-substring": "^0.1.6",
+    "react-timekeeper": "^2.1.3",
     "split-string": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
