--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "concurrently": "^5.3.0",
+    "formik": "^2.2.6",
     "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-addons-css-transition-group": "^15.6.2",
@@ -35,6 +37,7 @@
     "react-scripts": "4.0.1",
     "react-substring": "^0.1.6",
     "react-timekeeper": "^2.1.3",
+    "react-tooltip": "^4.2.13",
     "split-string": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
